# academor

./: .gitignore  README.md  entrypoint-local.sh  pyproject.toml
academor/: _patch_templates.py  manage.py
academor/academor/: asgi.py  middleware.py  settings.py  settings_local.py  urls.py  wsgi.py  wsgi_local.py
academor/projects/: context_processors.py  conversation_topics_data.py  conversation_topics_locale.py  seo_page_defaults.py  signals.py  sitemaps.py  urls_v1.py
academor/projects/admin/: admin_v1.py
academor/projects/forms/: forms_v1.py
academor/projects/migrations/: 0001_initial.py  0002_alter_about_options_alter_contact_options_and_more.py  0003_userresult_embed_user_data_remove_testuser.py  0004_media_category.py  0005_contact_map_embed_url.py  0006_media_courses_tests_bg_remove_footer_bg.py  0007_tagline_hero_fields.py  0008_tagline_localized_hero_fields.py  0009_team_descriptor_and_description_length.py  0010_team_description_richtext.py  0011_test_localized_fields.py  (+37 more)
academor/templates/: 404.html  about.html  abroad-detail.html  abroad.html  contact.html  course-detail.html  courses.html  english-conversation-topic-detail.html  english-conversation-topics.html  index.html  services.html  team-detail.html  team.html  test-result.html  test-take.html  testimonial.html  tests.html
conco/projects/: signals.py  urls_v1.py
conco/templates/: about.html  contact.html  index.html  project-details.html  projects.html  services.html  vacancy-details.html  vacancy.html
docker/: Dockerfile  docker-compose.yaml  entrypoint.sh
nginx/: nginx.conf
(+69 files in other folders)
