[project]
name = "academor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.10",
    "django-cleanup>=9.0.0",
    "django-ckeditor>=6.7.3",
    "dotenv>=0.9.9",
    "gunicorn>=23.0.0",
    "pillow>=12.1.0",
    "psycopg2-binary>=2.9.11",
    "unidecode>=1.4.0",
]
